
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_5__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_6__ {int y0; int y1; scalar_t__ x0; scalar_t__ x1; int member_3; int member_2; int member_1; int member_0; } ;
struct list {int scroll_y; int is_tree; int item_y; TYPE_1__ area; } ;
typedef TYPE_1__ fz_irect ;
struct TYPE_7__ {int lineheight; int middle_y; int y; int scroll_y; int window_h; struct list* hot; struct list* active; scalar_t__ middle; } ;


 int GL_SCISSOR_TEST ;
 int UI_COLOR_TEXT_BG ;
 int glEnable (int ) ;
 int glScissor (scalar_t__,int,scalar_t__,int) ;
 TYPE_5__ ui ;
 int ui_draw_bevel_rect (TYPE_1__,int ,int) ;
 scalar_t__ ui_mouse_inside (TYPE_1__) ;
 TYPE_1__ ui_pack (int,int) ;
 int ui_scrollbar (scalar_t__,int,scalar_t__,int,int*,int,int) ;

void ui_tree_begin(struct list *list, int count, int req_w, int req_h, int is_tree)
{
 static int start_scroll_y = 0;

 fz_irect outer_area = ui_pack(req_w, req_h);
 fz_irect area = { outer_area.x0+2, outer_area.y0+2, outer_area.x1-2, outer_area.y1-2 };

 int max_scroll_y = count * ui.lineheight - (area.y1-area.y0);

 if (max_scroll_y > 0)
  area.x1 -= 16;

 if (ui_mouse_inside(area))
 {
  ui.hot = list;
  if (!ui.active && ui.middle)
  {
   ui.active = list;
   start_scroll_y = list->scroll_y;
  }
 }


 if (ui.active == list)
  list->scroll_y = start_scroll_y + (ui.middle_y - ui.y) * 5;


 if (ui.hot == list)
  list->scroll_y -= ui.scroll_y * ui.lineheight * 3;


 if (list->scroll_y >= max_scroll_y)
  list->scroll_y = max_scroll_y;
 if (list->scroll_y < 0)
  list->scroll_y = 0;

 ui_draw_bevel_rect(outer_area, UI_COLOR_TEXT_BG, 1);
 if (max_scroll_y > 0)
 {
  ui_scrollbar(area.x1, area.y0, area.x1+16, area.y1,
    &list->scroll_y, area.y1-area.y0, count * ui.lineheight);
 }

 list->is_tree = is_tree;
 list->area = area;
 list->item_y = area.y0 - list->scroll_y;

 glScissor(list->area.x0, ui.window_h-list->area.y1, list->area.x1-list->area.x0, list->area.y1-list->area.y0);
 glEnable(GL_SCISSOR_TEST);
}
